[package]
name = "send_pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-sns = "0.28.0"
base64 = "0.21.2"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["tokio-macros", "full"] }
uuid = { version = "1.3.3", features = ["v4"] }
